[BE] refactor : stream에서 list 생성 방식 변경